; ModuleID = '/home/carl/AnghaBench/openwrt/package/network/services/ead/src/tinysrp/extr_t_pw.c_pwinit.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/network/services/ead/src/tinysrp/extr_t_pw.c_pwinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@syspw = common dso_local global %struct.TYPE_3__* null, align 8
@DEFAULT_PASSWD = common dso_local global i32 0, align 4
@FILE_NIS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @pwinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pwinit() #0 {
  %1 = alloca i32, align 4
  %2 = load %struct.TYPE_3__*, %struct.TYPE_3__** @syspw, align 8
  %3 = icmp eq %struct.TYPE_3__* %2, null
  br i1 %3, label %4, label %13

4:                                                ; preds = %0
  %5 = load i32, i32* @DEFAULT_PASSWD, align 4
  %6 = call %struct.TYPE_3__* @t_openpwbyname(i32 %5)
  store %struct.TYPE_3__* %6, %struct.TYPE_3__** @syspw, align 8
  %7 = icmp eq %struct.TYPE_3__* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %4
  store i32 -1, i32* %1, align 4
  br label %14

9:                                                ; preds = %4
  %10 = load i32, i32* @FILE_NIS, align 4
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** @syspw, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  br label %13

13:                                               ; preds = %9, %0
  store i32 0, i32* %1, align 4
  br label %14

14:                                               ; preds = %13, %8
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local %struct.TYPE_3__* @t_openpwbyname(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
